# befungaton

./: Cargo.toml  flake.nix
examples/: spin-cross.bfn
src/: cell.rs  cli.rs  cursor.rs  direction.rs  errors.rs  geometry.rs  glyph.rs  lib.rs  position.rs  space.rs  state.rs  tui.rs  widget.rs
src/cell/: physical.rs
src/geometry/: direction.rs  position.rs  rect.rs  span.rs
src/space/: tests.rs
src/tui/: event.rs
src/widget/: digit.rs  oparith.rs
