[package]
name = "befungaton"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
crossterm = "0.29.0"
derive_more = { version = "2.0.1", features = ["constructor", "deref", "from", "into"] }
derive-new = "0.7.0"
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.17"
ratatui = "0.29.0"

[dev-dependencies]
indoc = "2.0.6"
test-case = "3.3.1"
